testsuite/tests/typecheck/should_fail/T17077.hs
{-# LANGUAGE RankNTypes, PolyKinds #-}
{-# OPTIONS_GHC -fprint-explicit-kinds #-}
module T17077 where

import Data.Proxy

t :: Proxy (z :: forall k. a)
t = t
